--- a/templates/base.html
+++ b/templates/base.html
@@ -64,10 +64,10 @@
     
 <ul>
     <li><h2 class="brand_name" style="color: white; margin-right: 50px;"> Juan Click Wonders </h1></li>
-    <li><a class="{% block merch %}{% endblock %}" href="#">Merchandise</a></li>
-    <li><a class="{% block wiki %}{% endblock %}" href="#">Wiki</a></li>
-    <li><a class="{% block forum %}{% endblock %}" href="#">Forum</a></li>
-    <li><a class="{% block comm %}{% endblock %}" href="#">Commissions</a></li>
+    <li><a class="{% block merch %}{% endblock %}" href="/merchstore/items">Merchandise</a></li>
+    <li><a class="{% block wiki %}{% endblock %}" href="/wiki/articles">Wiki</a></li>
+    <li><a class="{% block forum %}{% endblock %}" href="/forum/threads">Forum</a></li>
+    <li><a class="{% block comm %}{% endblock %}" href="/commissions/list">Commissions</a></li>
 </ul>
 
 {% block content %}{% endblock %}
