Revised base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
             font-weight: 400;
         }
         
-        ul {
+        #navbar {
             list-style-type: none;
             position: sticky;
             top: 0;
@@ -24,12 +24,12 @@
             height:auto;
         }
         
-        li {
+        #navbar li {
             display: inline-block;
             vertical-align: top;
         }
         
-        li a {
+        #navbar li a {
             display: block;
             color: white;
             font-size: 20px;
@@ -37,26 +37,26 @@
             text-decoration: none;
         }
         
-        .active {
-            background-color: #70DCF8;
-            color: black;
-        }
-        
-        li a:hover {
+        #navbar li a:hover {
             opacity: 0.7;
             transition: opacity 0.3s ease;
         }
         
-        li:first-child {
+        #navbar li:first-child {
             padding-top: 8px;
             height: 100%;
         }
 
-        .brand_name {
+        #brand_name {
             color: white;
             margin-right: 50px;
             margin-bottom: 0;
             margin-top: 0;
+        }
+
+        #active {
+            background-color: #70DCF8;
+            color: black !important;
         }
     </style>
     {% block styles %}
@@ -64,12 +64,12 @@
 </head>
 <body>
     
-<ul>
-    <li><h2 class="brand_name" style="color: white; margin-right: 50px;"> Juan Click Wonders </h1></li>
-    <li><a class="{% block merch %}{% endblock %}" href="/merchstore/items">Merchandise</a></li>
-    <li><a class="{% block wiki %}{% endblock %}" href="/wiki/articles">Wiki</a></li>
-    <li><a class="{% block forum %}{% endblock %}" href="/forum/threads">Forum</a></li>
-    <li><a class="{% block comm %}{% endblock %}" href="/commissions/list">Commissions</a></li>
+<ul id="navbar">
+    <li><h2 id="brand_name"> Juan Click Wonders </h1></li>
+    <li><a id="{% block merch %}{% endblock %}" href="/merchstore/items">Merchandise</a></li>
+    <li><a id="{% block wiki %}{% endblock %}" href="/wiki/articles">Wiki</a></li>
+    <li><a id="{% block forum %}{% endblock %}" href="/forum/threads">Forum</a></li>
+    <li><a id="{% block comm %}{% endblock %}" href="/commissions/list">Commissions</a></li>
 </ul>
 
 {% block content %}{% endblock %}
