--- a/templates/merch_detail.html
+++ b/templates/merch_detail.html
@@ -7,18 +7,8 @@
 {% block styles %}
     <style>
         #details {
-            display: grid;
-            grid-template-rows: repeat(1, 1fr);
-            grid-template-columns: repeat(3, 1fr);
-            grid-auto-rows: 1.5fr;
-            gap: 5px;
-            width: 100%;
-            height: 100%;
-            list-style-type: none;
+            display: block;
             text-align: center;
-        }
-
-        #details li{
             border: 1px solid black;
             border-radius: 5px;
             box-shadow: 2px 2px #888888;
@@ -31,18 +21,11 @@
 {% block merch %}active{% endblock %}
 
 {% block content %}
-    <h2 style="text-align: center;">{{ producttype.name }}</h2>
+    <h2 style="text-align: center;">{{ product }}</h2>
     <div id="details">
-        {% if producttype.products.all.exists %}
-            {% for product in producttype.products.all %}
-                <li>
-                    <h4>{{ product.name }} - Php {{ product.price }}</h4>
-                    <p>{{ product.description }}</p>
-                </li>
-            {% endfor %}
-        {% else %}
-            <br>
-            <li>No products registered</li>
-        {% endif %}
+        <h3>{{ product.name }} - Php {{ product.price }}</h3>
+        <p>{{ product.description }}</p>
+        <h4>{{ product.product_type }}</h4>
+        <p>{{ product.product_type.description }}</p>
     </div>
 {% endblock content %}
