--- a/templates/forum_detail.html
+++ b/templates/forum_detail.html
@@ -4,42 +4,43 @@
 {% block title %}Forum Details{% endblock %}
 
 {% block styles %}
-<style>
-#content{
-    position: relative;
-    border: 1px solid black;
-    border-radius: 5px;
-    box-shadow: 2px 2px #888888;
-    width: 70%;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    word-wrap: break-word; /* This will allow the text to wrap */
-}
+    <style>
+        #content{
+            position: relative;
+            border: 1px solid black;
+            border-radius: 5px;
+            box-shadow: 2px 2px #888888;
+            width: 70%;
+            margin-top: 50px;
+            margin-left: auto;
+            margin-right: auto;
+            word-wrap: break-word;
+        }
 
-#return {
-    position: absolute;
-    top: -30px; /* Adjust top distance as needed */
-    color: black;
-    text-decoration: none;
-}
+        #return {
+            position: absolute;
+            top: -30px;
+            color: black;
+            text-decoration: none;
+        }
 
-#return:hover{
+        #return:hover{
             opacity: 0.7;
             transition: opacity 0.3s ease;
-}
-</style>
-{% endblock %}
+        }
+    </style>
+{% endblock styles %}
 
 {% block forum %}active{% endblock %}
 
 {% block content %}
-
-<div id="content">
-    <a id="return" href="/forum/threads">Back to Forums</a>
-    <h3 style="text-align: center; width: 95%; margin: 15px auto">{{ object.title }}</h3> 
-    <p style="text-align: justify; width: 95%; margin: auto;">{{ post.entry }}</p>
-    <br>
-</div>
-
-{% endblock %}
+    <div id="content">
+        <a id="return" href="/forum/threads">Back to Forums</a>
+        <h3 style="text-align: center; width: 95%; margin: 15px auto">{{ object.title }}</h3> 
+        <p style="text-align: justify; width: 95%; margin: auto;">{{ object.entry }}</p>
+        <br>
+        <p style="text-align: justify; width: 95%; margin: auto; font-size: small;">Created On: {{ object.created_on }}</p>
+        <p style="text-align: justify; width: 95%; margin: auto; font-size: small;">Updated On: {{ object.updated_on }}</p>
+        <br>
+    </div>
+{% endblock content %}
