Revised buttons to be consistent with function

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit">Submit</button>
+        <button type="submit">Log In</button>
     </form>
     <p><a href="{% url "password_reset" %}">Forgot your password?</a></p>
     <p>Not a member? <a href="{% url "user_management:register-user" %}">Sign up now!</a></p>
