--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -5,5 +5,5 @@
 
 {% block content %} 
     <h1>Password Reset Request</h1>
-    <a href="{% url 'user_management:login-user' %}">Login</p>
+    <a href="{% url 'user_management:login-user' %}">Log In</p>
 {% endblock content %}
