--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -5,6 +5,6 @@
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <button name="save" type="submit">Submit</button>
+        <button name="save" type="submit">Update</button>
     </form>
 {% endblock content %}
