--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -6,6 +6,6 @@
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit">Submit</button>
+        <button type="submit">Sign Up</button>
     </form>
 {% endblock content %}
