--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,8 @@
             overflow: hidden;
             background-color: black;
             text-align: center;
-            height:auto;
+            height: auto;
+            z-index: 1000;
         }
         
         #navbar li {
