Final merchstore app, list done

--- a/templates/merch_detail.html
+++ b/templates/merch_detail.html
@@ -21,7 +21,7 @@
 {% block merch %}active{% endblock %}
 
 {% block content %}
-    <h2 style="text-align: center;">{{ product }}</h2>
+    <h2 style="text-align: center;">Merchandise Store</h2>
     <div id="details">
         <h3>{{ product.name }} - Php {{ product.price }}</h3>
         <p>{{ product.description }}</p>
