fixed list view, started detail view

--- a/templates/merch_list.html
+++ b/templates/merch_list.html
@@ -66,30 +66,30 @@
 {% block content %}
     {% if request.user.is_authenticated %}
         <h2 style="text-align: center;">My Products</h2>
-        {% for product_type in product_types %}
-            <ul id="my_products">
-                {% for product in object_list %}
-                    {% if product.product_type == product_type and product.owner == request.user.profile %}
-                        <li>
-                            <h4>{{ product_type }}</h4>
-                            <h3><a href="{{ product.get_absolute_url }}">{{ product }}</a></h3>
-                            <p>Php - {{ product.price }}</p>
-                            <h4 id="status">{{ product.status }}</h4>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-        {% endfor %}
-        <h3><a href="{% url 'merchstore:merch_create' %}">Create a New Product</a></h3>
+        <div id="merch_list">
+            {% for product in object_list %}
+                {% if product.owner == request.user.profile %}
+                    <li>
+                        <h4>{{ product_type }}</h4>
+                        <h3><a href="{{ product.get_absolute_url }}">{{ product }}</a></h3>
+                        <p>Php - {{ product.price }}</p>
+                        <h4 id="status"><a href="{{ product.get_absolute_url }}">{{ product.status }}</a></h4>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </div>
+        <a href="{% url 'merchstore:merch_create' %}">Create a New Product</a>
     {% endif %}
-    <h2 style="text-align: center;">Merchandise Store</h2>
+    <h2 style="text-align: center;">Products 4 Sale</h2>
     <div id="merch_list">
         {% for product in object_list %}
-        <li>
-            <h3><a href="{{ product.get_absolute_url }}">{{ product }}</a></h3>
-            <p>Php - {{ product.price }}</p>
-            <h4 id="status">{{ product.status }}</h4>
-        </li>
+            {% if product.owner != request.user.profile %}
+                <li>
+                    <h3><a href="{{ product.get_absolute_url }}">{{ product }}</a></h3>
+                    <p>Php - {{ product.price }}</p>
+                    <h4 id="status"><a href="{{ product.get_absolute_url }}">{{ product.status }}</a></h4>
+                </li>
+            {% endif %}
         {% endfor %}
     </div>
 {% endblock content %}
