Added all necessary functionalities for Article List View

--- a/templates/wiki_list.html
+++ b/templates/wiki_list.html
@@ -6,12 +6,10 @@
 
 {% block styles %}
     <style>
-        #articles {
-            list-style-type: '📰';
-        }
-
-        #wiki_article {
-            list-style-type: '🎯';
+        .p-article {
+            color: black;
+            font-size: 2em;
+            font-weight: bold;
         }
     </style>
 {% endblock styles %}
@@ -19,14 +17,92 @@
 {% block wiki %}active{% endblock %}
 
 {% block content %}
-    <ul id="articles">
-        {% for article in articles %}
-            <li>
-                <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
-            </li>
-            <ul id="wiki_article">
-                <li>Category: {{ article.category.name }}</li>
-            </ul>
+    {% if request.user.is_authenticated %}
+    <p class='p-article'>User's Articles</p>
+    <ul>
+        {% for article in user_articles %}
+            <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
         {% endfor %}
     </ul>
+    <p class='p-article'>All Articles</p>
+    <ul>
+        <li>Laptop Articles
+            <ul>
+                {% for article in laptop_articles %}
+                    <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </li>
+        <li>Phone Articles
+            <ul>
+                {% for article in phone_articles %}
+                    <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </li>
+        <li>Processor Articles
+            <ul>
+                {% for article in processor_articles %}
+                    <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </li>
+        <li>Keyboard Articles
+            <ul>
+                {% for article in keyboard_articles %}
+                    <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </li>
+        <li>TV Articles
+            <ul>
+                {% for article in tv_articles %}
+                    <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </li>
+    </ul>
+    <p>Want to create an article? <a href="">Click here!</a></p>
+    {% else %}
+        <p class='p-article'>All Articles</p>
+        <ul>
+            <li>Laptop Articles
+                <ul>
+                    {% for article in laptop_articles %}
+                        <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+            <li>Phone Articles
+                <ul>
+                    {% for article in phone_articles %}
+                        <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+            <li>Processor Articles
+                <ul>
+                    {% for article in processor_articles %}
+                        <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+            <li>Keyboard Articles
+                <ul>
+                    {% for article in keyboard_articles %}
+                        <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+            <li>TV Articles
+                <ul>
+                    {% for article in tv_articles %}
+                        <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+        </ul>
+        <p>Want to create an article? <a href="">Click here!</a></p>
+    {% endif %}
+    
 {% endblock content %}
