--- a/templates/merch_list.html
+++ b/templates/merch_list.html
@@ -5,22 +5,9 @@
 {% block title %}Merchandise Store{% endblock %}
 
 {% block styles %}
-    <style>
-        #my_products{
-            list-style-type: none;
-            top: 0;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-
-        #my_products li {
-            display: inline-block;
-            text-align: center;
-        }
-        
+    <style>     
         #status{
-            background-color: #ddd;
+            background-color: #70DCF8;
             border: none;
             color: black;
             padding: 10px 20px;
@@ -34,7 +21,6 @@
 
         #merch_list{
             display: grid;
-            grid-template-rows: repeat(1, 1fr);
             grid-template-columns: repeat(3, 1fr);
             grid-auto-rows: 1.5fr;
             gap: 5px;
