--- a/templates/forum_detail.html
+++ b/templates/forum_detail.html
@@ -5,7 +5,7 @@
 
 {% block styles %}
     <style>
-        #content{
+        #content {
             position: relative;
             border: 1px solid black;
             border-radius: 5px;
@@ -24,9 +24,108 @@
             text-decoration: none;
         }
 
-        #return:hover{
+        #return:hover {
             opacity: 0.7;
             transition: opacity 0.3s ease;
+        }
+
+        #edit_thread {
+            position: absolute;
+            right:0px;
+            top: -30px;
+            color: black;
+            text-decoration: none;
+        }
+
+        #edit_thread:hover {
+            opacity: 0.7;
+            transition: opacity 0.3s ease;
+        }
+
+        #container {
+            margin-left: auto;
+            margin-right: auto;
+            width: 70%;
+            margin-bottom: 30px;
+        }
+
+        #container_title {
+            border-bottom: 1px solid black;
+            padding-left: 10px;
+            padding-bottom: 2px;
+            font-weight: bold;
+            margin-top: 15px;
+        }
+
+        #comments_list {
+            margin-bottom: 15px;
+            text-align: left;
+            padding-left: 10px;
+            padding-right: 10px;
+            list-style-type: none;
+            text-decoration: none;
+        }
+
+        #comments_list li {
+            word-wrap: break-word;
+        }
+
+        #content_list {
+            border: 1px solid black;
+            border-radius: 5px;
+            box-shadow: 2px 2px #888888;
+            margin-bottom: -5px;
+            text-align: left;
+            padding-left: 10px;
+            list-style-type: none;
+            text-decoration: none;
+        }
+
+        #content_link {
+            cursor: pointer;
+        }
+
+        #content_list:hover {
+            background-color: #F2F4F5;
+            transition: background-color 0.2s ease;
+        }
+
+        #content_list li {
+            word-wrap: break-word;
+        }
+
+        #comments_form {
+            width: 70%;
+            margin: 30px auto;
+        }
+
+        #comments_form button {
+            cursor: pointer;
+            opacity: 0.9;
+            position: absolute;
+            right: -5px;
+            border: 1px solid black;
+            border-radius: 2spx;
+            box-shadow: 2px 2px #888888;
+        }
+
+        #comments_form button:hover {
+            opacity: 0.7;
+            box-shadow: 1px 1px #888888;
+            transition: transform .2s ease-out;
+        }
+
+        #comments_form .add_comment {
+            position: relative;
+        }
+
+        #comments_form p {
+            margin-bottom: 0px;
+        }
+
+        textarea {
+            resize: none;
+            width: 100%;
         }
     </style>
 {% endblock styles %}
@@ -35,12 +134,71 @@
 
 {% block content %}
     <div id="content">
-        <a id="return" href="/forum/threads">Back to Forums</a>
-        <h3 style="text-align: center; width: 95%; margin: 15px auto">{{ object.title }}</h3> 
-        <p style="text-align: justify; width: 95%; margin: auto;">{{ object.entry }}</p>
+        <a id="return" href="{% url 'forum:threads'%}">Back to Forums</a>
+
+        {% if is_owner %}
+            <a id="edit_thread" href="{% url 'forum:edit_thread' pk=thread.pk %}">Edit Thread</a>
+        {% endif %} 
+
+        <p style="text-align: justify; width: 95%; margin: 10px auto; font-size: small;">Posted By: <span style="font-weight: bold;">{{ thread.author }}</span> | Category: {{ thread.category }}</p>
+        <h3 style="text-align: center; width: 95%; margin: 15px auto">{{ thread.title }}</h3> 
+        
+        {% if thread.image %}
+            <img src="{{ thread.image.url }}" style="position: relative; width: 35%; max-height: 35%;  display: block; margin-left: auto; margin-right: auto;">
+        {% endif %} 
+
+        <p style="text-align: justify; width: 95%; margin: auto;">{{ thread.entry }}</p>
         <br>
-        <p style="text-align: justify; width: 95%; margin: auto; font-size: small;">Created On: {{ object.created_on }}</p>
-        <p style="text-align: justify; width: 95%; margin: auto; font-size: small;">Updated On: {{ object.updated_on }}</p>
+        <p style="text-align: justify; width: 95%; margin: auto; font-size: small;">Created On: {{ thread.created_on }}</p>
+        <p style="text-align: justify; width: 95%; margin: auto; font-size: small;">Updated On: {{ thread.updated_on }}</p>
         <br>
+    </div>
+
+    <div id="container">
+        <div id="container_title">
+            Comments
+        </div>
+
+        {% for comment in comments %}
+            <ul id="comments_list">
+                <li>
+                    <p style="font-weight: bold; font-size: small;">{{ comment.author }} <span style="font-weight: normal;">• {{ comment.updated_on }}</span></p> 
+                    <p>{{ comment.entry }}</p>
+                </li>
+            </ul>
+        {% endfor %}
+
+        {% if comments|length == 0 %}
+                <p class="posts" style="text-align: center;">No Comments To Show</p>
+        {% endif %} 
+        
+        {% if request.user.is_authenticated %}
+            <form id="comments_form" method="POST">
+                <div class="add_comment">
+                    <p>Add a comment</p>
+                    {% csrf_token %}
+                    {{ comments_form.entry }}
+                    <button>Comment</button>
+                </div>
+            </form>
+        {% endif %} 
+
+        <div id="container_title">
+            More Threads
+        </div>
+
+        {% for thread in more_threads %}
+            <div id="content_link" onclick="location.href='{{ thread.get_absolute_url }}'">
+                <ul id="content_list">
+                    <li>
+                        <p class="posts">{{ thread.title }}</p>
+                    </li>
+                </ul>
+            </div>
+        {% endfor %}
+
+        {% if more_threads|length == 0 %}
+            <p class="posts" style="text-align: center;">No Threads To Show</p>
+        {% endif %} 
     </div>
 {% endblock content %}
