--- a/templates/forum_list.html
+++ b/templates/forum_list.html
@@ -9,7 +9,7 @@
             border: 1px solid black;
             border-radius: 5px;
             box-shadow: 2px 2px #888888;
-            margin-bottom: 10px;
+            margin-bottom: -5px;
             text-align: left;
             padding-left: 10px;
             list-style-type: none;
@@ -18,9 +18,6 @@
 
         #content_link{
             cursor: pointer;
-            margin-left: auto;
-            margin-right: auto;
-            width: 70%;
         }
 
         #content_list:hover{
@@ -31,6 +28,54 @@
         #content_list li {
             word-wrap: break-word;
         }
+
+        #category_container {
+            margin-left: auto;
+            margin-right: auto;
+            width: 70%;
+            margin-bottom: 30px;
+        }
+
+        #content_title {
+            background-color: #70DCF8;
+            border-top: 1px solid black;
+            box-shadow: 3px 3px #888888;
+            padding-left: 10px;
+            padding-bottom: 2px;
+            font-weight: bold;
+        }
+
+        .posts{
+            color: black;
+        }
+
+        #user_content {
+            display: flex;
+            justify-content: space-between;
+            background-color: #70DCF8;
+            border-top: 1px solid black;
+            box-shadow: 3px 3px #888888;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 2px;
+            font-weight: bold;
+        }
+
+        #user_content *{
+            margin: 0;
+        }
+
+        #add_thread {
+            color: black;
+            text-decoration: none;
+            display: block;
+            text-align: center;
+        }
+
+        #add_thread:hover{
+            opacity: 0.7;
+            transition: opacity 0.3s ease;
+        }
     </style>
 {% endblock styles %}
 
@@ -38,15 +83,44 @@
 
 {% block content %}
     <h3 style="text-align: center;">Threads</h3> 
+    {% if request.user.is_authenticated %}
+        <div id="category_container">
+            <div id="user_content">
+                <p>User Threads</p>
+                <a href="{% url 'forum:add_thread' %}" id="add_thread">Add Thread</a>
+            </div>
+        {% for post in user_threads %}
+            <div id="content_link" onclick="location.href='{{ post.get_absolute_url }}'">
+                <ul id="content_list">
+                    <li>
+                        <p class="posts">{{ post.title }}</p>
+                    </li>
+                </ul>
+            </div>
+        {% endfor %}
+        {% if user_threads|length == 0 %}
+            <p class="posts" style="text-align: center;">No Threads To Show</p>
+        {% endif %} 
+        </div>
+    {% endif %}
 
-    {% for post in object_list %}
-    <div id="content_link" onclick="location.href='{{ post.get_absolute_url }}';">
-        <ul id="content_list">
-            <li>
-                <h4 style="color:gray; font-size: small;">Category: {{ post.category }}</h4>
-                <h4 style="color:black;">{{ post.title }}</h4>
-            </li>
-        </ul>
+    {% for category, threads in threads_category.items %}
+    <div id="category_container">
+        <div id="content_title">
+            {{ category }}
+        </div>
+            {% for post in threads %}
+            <div id="content_link" onclick="location.href='{{ post.get_absolute_url }}'">
+                <ul id="content_list">
+                    <li>
+                        <p class="posts">{{ post.title }}</p>
+                    </li>
+                </ul>
+            </div>
+            {% endfor %}
+            {% if threads|length == 0 %}
+                <p class="posts" style="text-align: center;">No Threads To Show</p>
+            {% endif %} 
     </div>
     {% endfor %}
 {% endblock content %}
