--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,28 +4,46 @@
 
 {% block title %}Commission List{% endblock %}
 
+
+
 {% block styles %}
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</head>
     <style>
         img{
             height:auto;
         }
         .card{
-            width:15vw;
             margin: 1%;
-            margin-bottom: 0px;
+            margin-bottom: 10px;
+            width:50%;
+            height:auto;
         }
         .activities{
             display:flex;
             justify-content: space-evenly;
             height: 32vh;
         }
-        .card{
-            width:50%;
-            height:auto;
-        }
         .card-header{
             background-color: black;
             color:white;
+        }
+
+        a{
+            display: block;
+            text-decoration: none;
+            color: black;
+            width: fit-content;
+            font-weight: 600;
+            font-size: large;
+        }
+
+        a:hover{
+            color: black;
+            opacity: 0.7;
+            transition: opacity 0.3s ease;
         }
     </style>
 {% endblock styles %}
@@ -62,6 +80,13 @@
                 <strong><h3>Threads Created</h3></strong>
             </div>
             <div class="overflow-auto">
+                {% if user_threads.exists %}
+                    {% for threads in user_threads %}
+                        <a class="card-body" href="{{ threads.get_absolute_url }}">{{ threads.title }}</a>
+                    {% endfor %}
+                {% else %}
+                    <h5 class="card-body">No Threads Created Yet</h4>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -91,7 +116,7 @@
                         <h4 class="card-body">{{ commission.title }}</h3>
                     {% endfor %}
                 {% else %}
-                    <h4 class="card-body">No Applied Commissions Yet</h3>
+                    <h5 class="card-body">No Applied Commissions Yet</h3>
                 {% endif %}
             </div>
         </div>
