Added the Article Create and Update View

--- a/templates/wiki_list.html
+++ b/templates/wiki_list.html
@@ -11,6 +11,10 @@
             font-size: 2em;
             font-weight: bold;
         }
+        #category-name {
+            color: black;
+            font-size: 1.5em;
+        }
     </style>
 {% endblock styles %}
 
@@ -104,5 +108,4 @@
         </ul>
         <p>Want to create an article? <a href="">Click here!</a></p>
     {% endif %}
-    
 {% endblock content %}
