--- a/templates/wiki.html
+++ b/templates/wiki.html
@@ -7,8 +7,22 @@
 {% block wiki %}active{% endblock %}
 
 {% block content %}
-    <h2>{{ article.title }}</h2>
-    <p>{{ article.entry | linebreaks }}</p>
-    <p>Created On: {{ article.created_on }}</p>
-    <p>Updated On: {{ article.updated_on }}</p>
+    <h2>{{ current_article.title }}</h2>
+    <p>Created by: {{ current_article.author.display_name }}</p>
+    <p>Category: {{ current_category.get_name_display }}</p>
+    <p>Created On: {{ current_article.created_on }}</p>
+    <p>Updated On: {{ current_article.updated_on }}</p>
+
+    <img src="{{ article_image.url }}">
+    <p>{{ current_article.entry|linebreaks }}</p>
+    <p>Read More from {{ current_category.get_name_display }} Category</p>
+    <ul>
+        {% for article in read_others %}
+            <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+        {% endfor %}
+    </ul>
+
+    <p>Want to go back to the Articles List? <a href="{% url "wiki:wiki_list" %}">Click here!</a></p>
+
+    
 {% endblock content %}
