--- a/templates/commission_detail.html
+++ b/templates/commission_detail.html
@@ -6,47 +6,8 @@
 
 {% block styles %}
     <style>
-        #dates{
-            display: flex;
-            justify-content: space-between;
-        }
 
-        #comments_holder{
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            padding: 10px;
-        }
-
-        #comments{
-            background-color: transparent;
-            list-style-type: disc;
-        }
-
-        #comment{
-            display: list-item;
-        }
-
-        #back{
-            text-align: center;
-            border-radius: 20px;
-            width: 30px;
-            height: 30px;
-            background-color: white;
-            color: black;
-            text-decoration: none;
-        }
-
-        #back:hover{
-            border-radius: 20px;
-            background-color: #70DCF8;
-        }
-
-        #header_align{
-            display: flex;
-        }
-
-        #no_comment{
+        #no_jobs{
             list-style-type: none;
         }
     </style>
@@ -56,26 +17,60 @@
 
 {% block content %}
     <div id="header">
-        <div id="header_align">
-            <a id="back" href="/commissions/list">←</a>
-            <h2>{{ commission }}</h2>
-        </div>
+        <h2>{{ commission }}</h2>
         <p>{{ commission.description }}</p>
-        <p><strong>People Required:</strong> {{ commission.people_required }}</p>
+        <p><strong>Status:</strong> {{ commission.get_commission_status }}</p>
+        <!-- <p>Created By: {{ commission.author.display_name }}</p> -->
     </div>
-    <div id="dates">
-        <p>Created on: {{ commission.created_on }}</p>
-        <p>Updated on: {{ commission.updated_on }}</p>
-    </div>
-    <div id="comments_holder">
-        <ul id="comments">
-            {% if commission.comments.all.exists %}
-                {% for comment in commission.comments.all %}        
-                    <li id="comment">{{ comment.entry }}</li>
+    <div id="job_list">
+        {% if commission.jobs.all.exists %}
+                {% for jobs in commission.jobs.all %}
+                    <ul class="list-group position-relative start-50 top-50 bottom-50 translate-middle-x body" style="width:90vw; padding: 0.5vh;">        
+                        <li class="list-group-item">
+                            {{ jobs.role }}
+                            {% for info in jobs_data %}
+                                {% if info.job.role == jobs.role %}
+                                    <p>Manpower Required: {{info.remaining_manpower}}</p>
+                                    <p>Current Status: {{jobs.job_status}}</p>
+                                    {% if commission.author != request.user.profile %}
+                                        {% if jobs not in applied_jobs and info.remaining_manpower > 0 %} 
+                                            <form method="POST" action="{% url 'commissions:commission_detail' commission.pk %}"> 
+                                                {% csrf_token %}
+                                                <input type="hidden" name="job_role" value="{{ jobs.role }}">
+                                                <button type="submit" class="btn btn-primary btn-lg">Apply to Job</button>
+                                            </form>
+                                        {% else %}
+                                            <form method="POST" action="{% url 'commissions:commission_detail' commission.pk %}"> 
+                                                {% csrf_token %}
+                                                <input type="hidden" name="job_role" value="{{ jobs.role }}">
+                                                <button type="submit" class="btn btn-lg btn-primary" disabled>Cannot Apply</button>
+                                            </form>
+                                        {% endif %}
+                                    {% else %}
+                                        <a href="{% url 'commissions:update_job' jobs.pk %}"><button type="button" class="btn btn-outline-secondary btn-sm">Edit Job</button></a>
+                                        {% for applicant in jobs.applications.all %}
+                                            <p>
+                                                {{applicant.applicant.display_name}} - {{ applicant.application_status }} <a href="{% url 'commissions:update_job_application' commission.pk jobs.pk applicant.pk %}"><button type="button" class="btn btn-outline-primary">Manage Applicant</button></a>
+                                            </p>
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                        </li>
+                    </ul>
                 {% endfor %}
             {% else %}
-                <li id="no_comment">No comments</li>
-            {% endif %}
-        </ol>
+                <li id="no_jobs">No Jobs</li>
+        {% endif %}
+        <br>
+        {% if commission.author == request.user.profile %}
+            <div class="btn-group position-relative start-50 top-50 bottom-50 translate-middle-x" role="group">
+                <!-- <button type="button" class="btn btn-outline-primary" href="{% url 'commissions:update' commission.pk %}">Update Commission</button>
+                <button type="button" class="btn btn-outline-primary" href="{% url 'commissions:add_job' commission.pk %}">Add Job</button> -->
+                
+                <a href="{% url 'commissions:add_job' commission.pk %}" style="padding:1vw;"><button type="button" class="btn btn-outline-primary">Add Job</button></a>
+                <a href="{% url 'commissions:update' commission.pk %}" style="padding:1vw;"><button type="button" class="btn btn-outline-primary">Update Commission</button></a>
+            </div>
+        {% endif %}
     </div>
 {% endblock content %}
