--- a/templates/commission_detail.html
+++ b/templates/commission_detail.html
@@ -50,7 +50,7 @@
                                         <a href="{% url 'commissions:update_job' jobs.pk %}"><button type="button" class="btn btn-outline-secondary btn-sm">Edit Job</button></a>
                                         {% for applicant in jobs.applications.all %}
                                             <p>
-                                                {{applicant.applicant.display_name}} - {{ applicant.application_status }} <a href="{% url 'commissions:update_job_application' commission.pk jobs.pk applicant.pk %}"><button type="button" class="btn btn-outline-primary">Manage Applicant</button></a>
+                                                {{applicant.applicant.display_name}} - {{ applicant.get_application_status }} <a href="{% url 'commissions:update_job_application' commission.pk jobs.pk applicant.pk %}"><button type="button" class="btn btn-outline-primary">Manage Applicant</button></a>
                                             </p>
                                         {% endfor %}
                                     {% endif %}
