--- a/templates/wiki_list.html
+++ b/templates/wiki_list.html
@@ -66,7 +66,7 @@
             </ul>
         </li>
     </ul>
-    <p>Want to create an article? <a href="">Click here!</a></p>
+    <p>Want to create an article? <a href="{% url "wiki:wiki_create" %}">Click here!</a></p>
     {% else %}
         <p class='p-article'>All Articles</p>
         <ul>
@@ -106,6 +106,6 @@
                 </ul>
             </li>
         </ul>
-        <p>Want to create an article? <a href="">Click here!</a></p>
+        <p>Want to create an article? <a href="{% url "wiki:wiki_create" %}">Click here!</a></p>
     {% endif %}
 {% endblock content %}
